@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-30
+2015-05-13 Mikhail S. Dubrovin	
+- PrincetonBaseV1.h - set Rows=0, Cols=0 in order to support variable shape data for Princeton.
+
 Tag: V00-05-29
 2015-04-07 Mikhail S. Dubrovin	
 - in NDArrIOV1.cpp - in constructor 2 set m_size = nda_def.size(), other things are cosmetic.
